# RtopPluginManager

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: generate-executable.yml  generate-packages.yml  mirror-github-to-gitlab.yml
src/: lib.rs  main.rs
src/commands/: add_repository.rs  infos.rs  install.rs  mod.rs  remove_repository.rs  search.rs  uninstall.rs
src/git/: clone.rs  mod.rs  pull.rs  update_repositories.rs  updates_packages.rs
src/util/: structs.rs  utils.rs
tests/: lib.rs  tests_utils.rs
