[package]
name = "rtpm"
version = "0.0.1"
authors = ["Rtop Development Team"]
edition = "2021"
description = "The official tool to simplify the management of plugins for Rtop."
repository = "https://github.com/RtopRS/RtopPluginManager"
readme = "README.md"
homepage = "https://github.com/RtopRS"
license = "MPL-2.0"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true

[package.metadata.deb]
extended-description = """\
The official tool to simplify the management of plugins for Rtop.\
It allows to download plugins from plugin repositories or from simple git repositories. It also allows to update them easily or to get information about the plugins."""
depends = "$auto,rtop"
section = "utility"
priority = "optional"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtpm", dest = "/usr/bin/rpm", mode = "0755" },
]

[package.metadata.generate-rpm.requires]
rtop = "*"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "^0.10.41", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"
serde_json = "1.0"
colored = "2.0"
cargo = "0.64"
git2 = "0.14.2"
clap = "3.2"
dirs = "4.0"
url = "2.2"
