[package]
name = "rtpm"
version = "0.0.1"
authors = ["Rtop Development Team"]
edition = "2021"
description = "The official tool to simplify the management of plugins for Rtop."
repository = "https://github.com/RtopRS/RtopPluginManager"
readme = "README.md"
homepage = "https://github.com/RtopRS"
license = "MPL-2.0"

[profile.release]
codegen-units = 1
strip = true
lto = true

[package.metadata.deb]
extended-description = """\
The official tool to simplify the management of plugins for Rtop.\
It allows to download plugins from plugin repositories or from simple git repositories. It also allows to update them easily or to get information about the plugins."""
depends = "$auto,rtop"
section = "utility"
priority = "optional"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtpm", dest = "/usr/bin/rpm", mode = "0755" },
]

[package.metadata.generate-rpm.requires]
rtop = "*"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
openssl = { version = "^0.10.42", features = ["vendored"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
itertools = "0.10.5"
colored = "2.0.0"
cargo = "0.65.0"
git2 = "0.14.0"
dirs = "4.0.0"
url = "2.3.1"
clap = "3.2"

